--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "node test-splitting.js",
-    "start": "node src/index.js",
-    "demo:components": "node examples/individual-components.js",
-    "demo:individual": "node examples/individual-components.js"
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
